# shtrausCs

./: CMakeLists.txt
include/: CMakeLists.txt
src/: CMakeLists.txt  ex4c.cpp  main.cpp
